--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,19 @@
+blinker==1.9.0
 certifi==2025.4.26
-click==8.1.8
-Flask==2.2.5
+click==8.2.1
+Flask==3.1.1
 gunicorn==23.0.0
-importlib-metadata==6.7.0
-itsdangerous==2.1.2
+importlib_metadata==8.7.0
+itsdangerous==2.2.0
 Jinja2==3.1.6
-joblib==1.3.2
-MarkupSafe==2.1.5
-numpy==1.21.6
-packaging==24.0
+joblib==1.5.1
+MarkupSafe==3.0.2
+numpy==2.2.6
+packaging==25.0
 pickle-mixin==1.0.2
-scikit-learn==1.0.2
-scipy==1.7.3
-threadpoolctl==3.1.0
-typing_extensions==4.7.1
-Werkzeug==2.2.3
-zipp==3.15.0
+scikit-learn==1.7.0
+scipy==1.15.3
+threadpoolctl==3.6.0
+typing_extensions==4.14.0
+Werkzeug==3.1.3
+zipp==3.22.0
